# modelGPT

./: README.md  pyproject.toml
example/: example_usage.py
modelgpt/: __init__.py  modelgpt.py
modelgpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py  test_all.py
